// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionHeader Snapshots matches snapshot in RTL mode 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#fff",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingLeft": 16,
          "width": 44,
        }
      }
    >
      <View
        style={
          {
            "width": 44,
          }
        }
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "flexWrap": "wrap",
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Question Title
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "flex-end",
          "minWidth": 44,
          "paddingRight": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`QuestionHeader Snapshots matches snapshot with back button 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#fff",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingLeft": 16,
          "width": 44,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <Text
          testID="icon-chevron.left"
        >
          chevron.left
        </Text>
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "flexWrap": "wrap",
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Question Title
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "flex-end",
          "minWidth": 44,
          "paddingRight": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`QuestionHeader Snapshots matches snapshot with both buttons 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#fff",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingLeft": 16,
          "width": 44,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <Text
          testID="icon-chevron.left"
        >
          chevron.left
        </Text>
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "flexWrap": "wrap",
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Question Title
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "flex-end",
          "minWidth": 44,
          "paddingRight": 16,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <Text
          testID="icon-xmark"
        >
          xmark
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`QuestionHeader Snapshots matches snapshot with close button 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#fff",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingLeft": 16,
          "width": 44,
        }
      }
    >
      <View
        style={
          {
            "width": 44,
          }
        }
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "flexWrap": "wrap",
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Question Title
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "flex-end",
          "minWidth": 44,
          "paddingRight": 16,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <Text
          testID="icon-xmark"
        >
          xmark
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`QuestionHeader Snapshots matches snapshot with default props 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#fff",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingLeft": 16,
          "width": 44,
        }
      }
    >
      <View
        style={
          {
            "width": 44,
          }
        }
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "flexWrap": "wrap",
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Question Title
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "flex-end",
          "minWidth": 44,
          "paddingRight": 16,
        }
      }
    />
  </View>
</View>
`;
